--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,14 @@
     "https://steamcommunity.com/*",
     "https://www.faceit.com/api/*"
   ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
   "background": {
     "service_worker": "background.js"
   },
